# uvhttp

./: .gitmodules  CMakeLists.txt
cmake/: http-parser.cmake  uv.cmake
example/: CMakeLists.txt  main.c
include/uvhttp/: callbacks.h  client.h  defs.h  header.h  http.h  request.h  response.h  typedefs.h
src/: CMakeLists.txt  client.c  client_p.c  client_p.h  debug.h  header.c  http.c  http_p.c  http_p.h  parser.c  parser.h  request.c
test/: CMakeLists.txt  main.c  minunit.h  test_header.c
